--- a/js_lyrics_searcher/style.css
+++ b/js_lyrics_searcher/style.css
@@ -2,15 +2,12 @@
   box-sizing: border-box;
 }
 
-:root {
-  --pinkish: #e056fd;
-}
-
 body {
   background-color: #fff;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
+
 button {
   cursor: pointer;
 }
@@ -45,7 +42,7 @@ header::after {
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 header * {
@@ -58,7 +55,6 @@ header h1 {
 
 form {
   position: relative;
-  /* ^^^ relative cause the button will be absolute */
   width: 500px;
   max-width: 100%;
 }
@@ -75,8 +71,7 @@ form button {
   position: absolute;
   top: 2px;
   right: 2px;
-
-  background-color: var(--pinkish);
+  background-color: #e056fd;
   border: 0;
   border-radius: 50px;
   color: #fff;
@@ -93,7 +88,7 @@ form button {
 }
 
 ul.songs {
-  list-style: none;
+  list-style-type: none;
   padding: 0;
 }
 
@@ -107,6 +102,7 @@ ul.songs li {
 .container {
   margin: 30px auto;
   max-width: 100%;
+  width: 500px;
 }
 
 .container h2 {
